<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.4</version>
        <relativePath/>
    </parent>

    <groupId>com.epam.brest</groupId>
    <artifactId>mockbank</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>model</module>
        <module>prod-db</module>
        <module>test-db</module>
        <module>dao-api</module>
        <module>dao-spring-jdbc</module>
        <module>bank-data-generator-api</module>
        <module>bank-data-generator</module>
        <module>service-api</module>
        <module>service</module>
        <module>rest-openapi</module>
        <module>rest-app</module>
        <module>service-rest</module>
        <module>web-app</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <spring-boot.version>2.6.4</spring-boot.version>
        <springdoc-openapi-ui.version>1.6.6</springdoc-openapi-ui.version>
        <iban4j.version>3.2.3-RELEASE</iban4j.version>
        <h2.version>2.1.210</h2.version>
        <testcontainers-postgresql.version>1.16.3</testcontainers-postgresql.version>
        <swagger-annotations.version>1.6.5</swagger-annotations.version>
        <springdoc-openapi-maven-plugin.version>1.1</springdoc-openapi-maven-plugin.version>
        <jackson-databind-nullable.version>0.2.2</jackson-databind-nullable.version>
        <openapi-generator-maven-plugin.version>5.4.0</openapi-generator-maven-plugin.version>
        <project.testresult.directory>${project.build.directory}/testResults</project.testresult.directory>
        <junit.utReportFolder>${project.testresult.directory}/unitTests</junit.utReportFolder>
        <junit.itReportFolder>${project.testresult.directory}/integrationTests</junit.itReportFolder>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>prod-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>test-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>dao-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>dao-spring-jdbc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>bank-data-generator-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>bank-data-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>service-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>rest-openapi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>service-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>rest-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.epam.brest</groupId>
                <artifactId>web-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.iban4j</groupId>
                <artifactId>iban4j</artifactId>
                <version>${iban4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc-openapi-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>postgresql</artifactId>
                <version>${testcontainers-postgresql.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openapitools</groupId>
                <artifactId>jackson-databind-nullable</artifactId>
                <version>${jackson-databind-nullable.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-maven-plugin</artifactId>
                    <version>${springdoc-openapi-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <reportsDirectory>${junit.utReportFolder}</reportsDirectory>
                        <excludes>
                            <exclude>**/*IT*</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                        <runOrder>alphabetical</runOrder>
                        <reportsDirectory>${junit.itReportFolder}</reportsDirectory>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                        <includes>
                            <include>**/*IT*</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>